--- a/views/users.ejs
+++ b/views/users.ejs
@@ -3,10 +3,13 @@
     <head>
         <title><%= title %></title>
         <link rel='stylesheet' href='/styles/css/bootstrap.min.css' />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
+        <link rel="stylesheet" href="/stylesheets/style.css" />
         <script src="/javascripts/load.js"></script>
     </head>
     <body>
-        <table class="table table-striped">
+        <h1>UsersFetch | MongoDB</h1>
+        <table class="table table-striped border-black">
             <thead>
                 <tr>
                     <th scope="col">#</th>
@@ -20,10 +23,10 @@
 
             </tbody>
         </table>
-        <form action="/users/new" method="post" id="formularioa">
-            <input type="text" name="izena" placeholder="Izena" />
-            <input type="text" name="abizena" placeholder="Abizena" />
-            <input type="text" name="email" placeholder="Email" />
+        <form action="/users/new" method="post" id="formularioa" class="d-flex flex-column flex-md-row">
+            <input type="text" name="izena" placeholder="Izena" class="flex-fill" />
+            <input type="text" name="abizena" placeholder="Abizena" class="flex-fill" />
+            <input type="text" name="email" placeholder="Email" class="flex-fill" />
             <input type="hidden" name="id" />
             <input type="submit" value="Gehitu" />
         </form>
