--- a/views/users.ejs
+++ b/views/users.ejs
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="author" content="Josu Aginaga" />
+        <meta name="description" content="WS ikasgaian MongoDB ikasteko UsersFetch ariketa" />
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <title><%= title %></title>
         <link rel='stylesheet' href='/styles/css/bootstrap.min.css' />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
@@ -8,27 +13,31 @@
         <script src="/javascripts/load.js"></script>
     </head>
     <body>
-        <h1>UsersFetch | MongoDB</h1>
-        <table class="table table-striped border-black">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Actions</th>
-                </tr>
-            </thead>
-            <tbody id="userTableBody">
+        <header>
+            <h1>UsersFetch | MongoDB</h1>
+        </header>
+        <main>
+            <table class="table table-striped border-black">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">First</th>
+                        <th scope="col">Last</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="userTableBody">
 
-            </tbody>
-        </table>
-        <form action="/users/new" method="post" id="formularioa" class="d-flex flex-column flex-md-row">
-            <input type="text" name="izena" placeholder="Izena" class="flex-fill" required />
-            <input type="text" name="abizena" placeholder="Abizena" class="flex-fill" required />
-            <input type="email" name="email" placeholder="Email" class="flex-fill" required />
-            <input type="hidden" name="id" />
-            <input type="submit" value="Gehitu" />
-        </form>
+                </tbody>
+            </table>
+            <form action="/users/new" method="post" id="formularioa" class="d-flex flex-column flex-md-row">
+                <input type="text" name="izena" placeholder="Izena" class="flex-fill" required />
+                <input type="text" name="abizena" placeholder="Abizena" class="flex-fill" required />
+                <input type="email" name="email" placeholder="Email" class="flex-fill" required />
+                <input type="hidden" name="id" />
+                <input type="submit" value="Gehitu" />
+            </form>
+        </main>
     </body>
 </html>
