--- a/views/users.ejs
+++ b/views/users.ejs
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="author" content="Josu Aginaga" />
-        <meta name="description" content="WS ikasgaian MongoDB ikasteko UsersFetch ariketa" />
+        <meta name="description" content="WS ikasgaian MongoDB eta Multer ikasteko UsersFetch ariketa" />
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <title><%= title %></title>
         <link rel='stylesheet' href='/styles/css/bootstrap.min.css' />
@@ -14,7 +14,7 @@
     </head>
     <body>
         <header>
-            <h1>UsersFetch | MongoDB</h1>
+            <h1>UsersFetch | MongoDB | Multer</h1>
         </header>
         <main>
             <table class="table table-striped border-black">
